# json-mapper

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.yaml
.github/workflows/: ci-checks.yml
examples/: input.json  mapping.json
json_mapper/: __init__.py  cli.py  transform.py  utils.py
tests/: __init__.py  test_cli.py  test_transform.py  test_utils.py
